--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scr/css/style.css"/>
+    <link rel="stylesheet" href="./src/css/style.css"/>
     <title>Classificador de Nível de Herói</title>
 </head>
 <body>
@@ -27,6 +27,6 @@
             </div>
         </div>
     </div>
-    <script src="./scr/js/script.js"></script>
+    <script src="./src/js/script.js"></script>
 </body>
 </html>
